kubernetes/apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: uptime-kuma
